force-app/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__OtherCharges__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OtherCharges__c</fullName>
    <label>Other Charges</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>