force-app/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__OtherChargesDescription__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__OtherChargesDescription__c</fullName>
    <label>Other Charges Description</label>
    <length>10</length>
    <type>Text</type>
</CustomField>