force-app/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__ReferenceValue__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ReferenceValue__c</fullName>
    <label>Reference Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>