force-app/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__SoldToContact__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commercial Invoices</relationshipLabel>
    <relationshipName>Commercial_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>