force-app/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__SoldToZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SoldToZipPostalCode__c</fullName>
    <label>Sold To Zip/Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>