force-app/main/default/objects/zkmulti__CommercialInvoice__c/fields/zkmulti__SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SpecialInstructions__c</fullName>
    <label>Special Instructions</label>
    <type>TextArea</type>
</CustomField>